src/objects/SSC_SubMetric__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L3Indicator__c</fullName>
        <label>L3 Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Name__c</fullName>
        <label>Metric Name</label>
        <referenceTo>SSC_Metric__c</referenceTo>
        <relationshipName>SSC_SubMetric</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TargetScore__c</fullName>
        <label>Target Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Supplier Sub Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>L3Indicator__c</columns>
        <columns>TargetScore__c</columns>
        <columns>Metric_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SubMetric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Sub Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>